# pubMed-cli

./: PROJECT_REPORT.md  README.md  VALIDATION_CHECKLIST.md  pyproject.toml  results.csv  setup.py  test_output.csv  test_scenarios.sh
pubmed_pharma_papers/: __init__.py  author_classifier.py  cli.py  csv_formatter.py  models.py  pubmed_client.py
